--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.0.3",
-    "prettier": "^2.4.1"
+    "node-sass": "^7.0.3",
+    "prettier": "^2.4.1",
+    "sass": "^1.55.0",
+    "sass-loader": "^10.3.1"
   }
 }
